removes align-content: center as no longer needed

--- a/components/vf-banner/vf-banner--alerts.scss
+++ b/components/vf-banner/vf-banner--alerts.scss
@@ -1,7 +1,6 @@
 .vf-banner--alert {
   .vf-banner__content {
     display: flex;
-    align-items: center;
   }
   .vf-banner__text,
   [class*='vf-text'] {
